fix code snippets overflow issue

--- a/assets/scss/logo.scss
+++ b/assets/scss/logo.scss
@@ -1,6 +1,7 @@
 #logo {
   display: inline-block;
   height: 54px;
+  position: relative;
   user-select: none;
 
   &:hover {
@@ -30,10 +31,10 @@
     color: lighten($purple-light,25%);
     font-size: 11px;
     line-height: 54px;
-    position: relative;
-      top: -12px;
-      left: -4px;
+    position: absolute;
+    right: -84px;
     text-shadow: 0 -1px 0 rgba(0,0,0,.2);
+    top: -6px;
     user-select: none;
   }
 }
